修改gif相关使用方式，避免部分平台使用报错
https://github.com/Binaryify/vue-qr/issues/117

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-qr",
+  "name": "maitao-vue-qr",
   "version": "4.0.9",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 0.0.0.0",
